--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <meta
       name="description"
-      content="Bounteness Appretenship React.js Assessement"
+      content="React.js Assessement"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
